# app/Http/Controllers/API/APIAuthController.php
@@ -126,53 +126,4 @@ class APIAuthController extends Controller
 
         return response()->json($response);
     }
-
-    /**
-     * @SWG\Get(
-     *   path="/profile",
-     *   summary="Get user profile",
-     *   description="-",
-     *   tags={"Authenticate"},
-     *   consumes={"application/x-www-form-urlencoded"},
-     *   produces={"application/json"},
-     *   @SWG\Parameter(
-     *       name="Authorization",
-     *       in="header",
-     *       description="User Access Token (eg: Bearer [user token])",
-     *       required=true,
-     *       type="string",
-     *       format="string",
-     *       @SWG\Items(type="string"),
-     *       collectionFormat="multi"
-     *   ),
-     *
-     *   @SWG\Response(
-     *     response=200,
-     *     description="User profile"
-     *   ),
-     *   @SWG\Response(
-     *     response="500",
-     *     description="Error Message"
-     *   )
-     * )
-     */
-    public function profile(Request $request)
-    {
-        $response = ['status' => 'error', 'code' => 500];
-
-        try {
-            $user = Auth::guard('api')->user();
-            $user->student = Student::find($user->parent_id);
-            $response = [
-                'status' => 'success',
-                'code' => 200,
-                'data' => $user
-            ];
-
-        } catch (Exception $e) {
-            $response['message'] = $e->getMessage();
-        }
-
-        return response()->json($response);
-    }
 }
